# Homework7Web

./: alembic.ini  connect_db.py  models.py  my_select.py  pyproject.toml  seed.py
alembic/versions/: 834235d7a497_version_1.py
